--- a/ext.gradle
+++ b/ext.gradle
@@ -1,5 +1,3 @@
-apply from: 'versions.gradle'
-
 ext {
     compileSdkVersion = 28
     buildToolsVersion = '28.0.3'
@@ -17,6 +15,7 @@ ext {
 
     guavaVersion = '23.6-android'
     // Test
+    junitVersion = '4.12'
     mockitoVersion = '1.10.19'
     powerMockito = '1.6.2'
     hamcrestVersion = '1.3'
@@ -26,7 +25,9 @@ ext {
     supportLibraryVersionx = '1.0.0'
     archLifecycleVersionx = "2.2.0"
     roomVersionx = "2.0.0"
+    runnerVersionx = '1.1.0-alpha3'
     uiautomatorx = '2.2.0'
+    espressoVersionx = '3.1.0-alpha3'
     //
     leakcanaryVersion = '1.5'
 }
@@ -53,10 +54,9 @@ subprojects {
             targetSdkVersion rootProject.ext.targetSdkVersion
             versionCode rootProject.ext.versionCode
             versionName rootProject.ext.versionName
+            flavorDimensions "$rootProject.ext.versionCode"
             testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         }
-
-        flavorDimensions "123"
 
         if (isMainApp) {
             productFlavors {
@@ -107,9 +107,9 @@ subprojects {
     }
 
     dependencies {
-        testImplementation deps.junit
-        androidTestImplementation deps.atsl.runner
-        androidTestImplementation deps.espresso.core
+        androidTestImplementation "androidx.test:runner:$runnerVersionx"
+        androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersionx"
+        testImplementation "junit:junit:$junitVersion"
 
         debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakcanaryVersion"
         releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakcanaryVersion"
@@ -128,10 +128,9 @@ subprojects {
             implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
             implementation "androidx.legacy:legacy-support-v4:$supportLibraryVersionx"
             //
-
-            implementation deps.core_ktx
             implementation "androidx.activity:activity-ktx:1.1.0"
             implementation "androidx.fragment:fragment-ktx:1.1.0"
+
             implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$archLifecycleVersionx"
             implementation "androidx.lifecycle:lifecycle-runtime-ktx:$archLifecycleVersionx"
             implementation "androidx.lifecycle:lifecycle-livedata-ktx:$archLifecycleVersionx"
@@ -147,9 +146,6 @@ subprojects {
             //
             implementation 'com.google.code.gson:gson:2.8.2'
             implementation 'com.github.bumptech.glide:glide:3.8.0'
-
-            implementation 'pub.devrel:easypermissions:3.0.0'
-
             implementation project(rootProject.ext.modules.router)
             if (!isCommon) {
                 implementation project(rootProject.ext.modules.common)
